ADded methjax to site

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,5 +14,11 @@ theme:
       site_name: true
   name: simple-blog
 
+markdown_extensions:
+    - mdx_math
+
 extra_css:
   - css/overrides.css
+
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML
